--- a/src/app/alltimes/alltimes.component.html
+++ b/src/app/alltimes/alltimes.component.html
@@ -15,7 +15,7 @@
   
     <p-dataTable #dt [value]="allTimesheetData" class="ui-g-12" sortField="startTime" sortOrder="1" emptyMessage="No time entries found"
       [reorderableColumns]="true" columnResizeMode="fit" [resizableColumns]="true" [globalFilter]="tableSearch" exportFilename="users"
-      [editable]="true" (onEditComplete)="onEditComplete($event)" [(selection)]="selectedRows" (onRowSelect)="onRowSelect($event)"
+      [editable]="true" (onSaveComplete)="onSaveComplete($event)" [(selection)]="selectedRows" (onRowSelect)="onRowSelect($event)"
       [contextMenu]="tableContextMenu" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5,10,15,20]" [totalRecords]="recordCount"
       [pageLinks]="8">
   
@@ -45,4 +45,41 @@
   
     <p-contextMenu #tableContextMenu [model]="contextMenu"></p-contextMenu>
   
+  <!--
+    ADDED FOR 09/29 CLASS
+  -->
+<button pButton label="Add Time" (click)="displayEntryForm = true"></button>
+    
+<p-dialog header="Add TimeSheet" [modal]="true" [(visible)]="displayEntryForm" width="700"
+ height="550">
+<form [formGroup]="timesheetForm" (ngSubmit)="onSaveComplete()" class="ui-g">
+    <p-panel header="Add Project" class="ui-g-12">
+<div class="ui-g">
+ <label for="User" class="ui-g-12 ui-md-2">User</label>
+    <input type="text" id="input1Id" formControlName="input1" class="ui-g-12 ui-md-5"/>
+</div>
+<div class="ui-g">
+  <label for="Project" class="ui-g-12 ui-md-2">Project</label>
+    <input type="text" id="input2Id" formControlName="input2"  class="ui-g-12 ui-md-5">
+</div>
+<div class="ui-g">
+  <label for="Category" class="ui-g-12 ui-md-2">Category  </label>
+  <input type="text" id="input3Id" formControlName="input3" class="ui-g-12 ui-md-5">
+</div>
+<div class="ui-g">
+  <label for="StartTime" class="ui-g-12 ui-md-2">StartTime</label>
+      <input type="number" id="input4Id" formControlName="input4" class="ui-g-12 ui-md-5">
   </div>
+<div class="ui-g">
+  <label for="EndTime" class="ui-g-12 ui-md-2">EndTime</label>
+      <input type="number" id="input5Id" formControlName="input5" class="ui-g-12 ui-md-5">
+  </div>
+
+<p-footer>
+    <button pButton label="Add" icon="fa-check"></button>
+</p-footer>
+</p-panel>
+</form>
+
+
+</p-dialog>
